--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         </div>
         <div class="text-center mt-4">
           <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fa fa-download mr-2"></i>
-            지금 다운로드 하세요!!
+            <i class="fa fa-download mr-2">https://www.youtube.com/channel/UC5Qs6-dZL6duzI-ciC_T7Gw</i>
+            지금 최땅꼴 채널로~~
           </a>
         </div>
       </div>
