--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">문의</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">문의(updataing....)</h2>
         <hr class="star-dark mb-5">
         <div class="row">
           <div class="col-lg-8 mx-auto">
